# LuappDev

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LuappDev.sln  conanfile.txt  setup_lua.bat  setup_lua.sh
.github/workflows/: ci.yml
LuappDev/: AutoCleanStack.cpp  BaseDatatypes.cpp  CreateDelete.cpp  DtorTest.h  Extension.cpp  Functions.cpp  Hook.cpp  Iterate.cpp  LocalAccess.cpp  LuappDev.cpp  LuappDev.vcxproj  LuappDev.vcxproj.filters  Operators.cpp  RunLua.cpp  Serialization.cpp  StackAccess.cpp  Tables.cpp  Typename.cpp  UserClass.cpp  luaver.h
lua50_builder/: CMakeLists.txt
